PythonParser.py
# Generated from PythonParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PythonParser ( Parser ):

    grammarFileName = "PythonParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'elif'", "'else'", "'and'", "'or'", 
                     "'not'", "'True'", "'False'", "'def'", "'class'", "'try'", 
                     "'except'", "'finally'", "'in'", "'while'", "'for'", 
                     "'print'", "'input'", "'return'", "'break'", "'continue'", 
                     "'import'", "'from'", "'as'", "'with'", "'pass'", "'='", 
                     "'+='", "'-='", "'*='", "'/='", "'%='", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'**'", "'//'", "'=='", "'!='", 
                     "'<='", "'>='", "'<'", "'>'", "':'", "','", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELIF", "ELSE", "AND", "OR", "NOT", 
                      "TRUE", "FALSE", "DEF", "CLASS", "TRY", "EXCEPT", 
                      "FINALLY", "IN", "WHILE", "FOR", "PRINT", "INPUT", 
                      "RETURN", "BREAK", "CONTINUE", "IMPORT", "FROM", "AS", 
                      "WITH", "PASS", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", 
                      "MULT_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "PLUS", 
                      "MINUS", "MULT", "DIV", "MOD", "POW", "FLOOR_DIV", 
                      "EQ", "NEQ", "LTE", "GTE", "LT", "GT", "COLON", "COMMA", 
                      "LPAREN", "RPAREN", "LBRACK", "RBRACK", "LBRACE", 
                      "RBRACE", "ID", "FLOAT", "INT", "STRING", "NEWLINE", 
                      "INDENT", "SPACES", "COMMENT" ]

    RULE_code = 0
    RULE_stat = 1
    RULE_block = 2
    RULE_op_assignment = 3
    RULE_op_mult = 4
    RULE_op_add = 5
    RULE_op_comp = 6
    RULE_assignment = 7
    RULE_print_stmt = 8
    RULE_input_stmt = 9
    RULE_return_stmt = 10
    RULE_break_stmt = 11
    RULE_continue_stmt = 12
    RULE_pass_stmt = 13
    RULE_import_stmt = 14
    RULE_func = 15
    RULE_class_def = 16
    RULE_try_except = 17
    RULE_condicional = 18
    RULE_loop_while = 19
    RULE_loop_for = 20
    RULE_func_call = 21
    RULE_expr = 22
    RULE_lista = 23
    RULE_tupla = 24
    RULE_dicionario = 25
    RULE_conjunto = 26

    ruleNames =  [ "code", "stat", "block", "op_assignment", "op_mult", 
                   "op_add", "op_comp", "assignment", "print_stmt", "input_stmt", 
                   "return_stmt", "break_stmt", "continue_stmt", "pass_stmt", 
                   "import_stmt", "func", "class_def", "try_except", "condicional", 
                   "loop_while", "loop_for", "func_call", "expr", "lista", 
                   "tupla", "dicionario", "conjunto" ]

    EOF = Token.EOF
    IF=1
    ELIF=2
    ELSE=3
    AND=4
    OR=5
    NOT=6
    TRUE=7
    FALSE=8
    DEF=9
    CLASS=10
    TRY=11
    EXCEPT=12
    FINALLY=13
    IN=14
    WHILE=15
    FOR=16
    PRINT=17
    INPUT=18
    RETURN=19
    BREAK=20
    CONTINUE=21
    IMPORT=22
    FROM=23
    AS=24
    WITH=25
    PASS=26
    ASSIGN=27
    PLUS_ASSIGN=28
    MINUS_ASSIGN=29
    MULT_ASSIGN=30
    DIV_ASSIGN=31
    MOD_ASSIGN=32
    PLUS=33
    MINUS=34
    MULT=35
    DIV=36
    MOD=37
    POW=38
    FLOOR_DIV=39
    EQ=40
    NEQ=41
    LTE=42
    GTE=43
    LT=44
    GT=45
    COLON=46
    COMMA=47
    LPAREN=48
    RPAREN=49
    LBRACK=50
    RBRACK=51
    LBRACE=52
    RBRACE=53
    ID=54
    FLOAT=55
    INT=56
    STRING=57
    NEWLINE=58
    INDENT=59
    SPACES=60
    COMMENT=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PythonParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.NEWLINE)
            else:
                return self.getToken(PythonParser.NEWLINE, i)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatContext,i)


        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.FuncContext)
            else:
                return self.getTypedRuleContext(PythonParser.FuncContext,i)


        def class_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.Class_defContext)
            else:
                return self.getTypedRuleContext(PythonParser.Class_defContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_code

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCode" ):
                return visitor.visitCode(self)
            else:
                return visitor.visitChildren(self)




    def code(self):

        localctx = PythonParser.CodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_code)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 564357328388460482) != 0):
                self.state = 58
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [58]:
                    self.state = 54
                    self.match(PythonParser.NEWLINE)
                    pass
                elif token in [1, 6, 7, 8, 11, 15, 16, 17, 19, 20, 21, 22, 23, 26, 48, 50, 52, 54, 55, 56, 57]:
                    self.state = 55
                    self.stat()
                    pass
                elif token in [9]:
                    self.state = 56
                    self.func()
                    pass
                elif token in [10]:
                    self.state = 57
                    self.class_def()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self.match(PythonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(PythonParser.AssignmentContext,0)


        def print_stmt(self):
            return self.getTypedRuleContext(PythonParser.Print_stmtContext,0)


        def input_stmt(self):
            return self.getTypedRuleContext(PythonParser.Input_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(PythonParser.Return_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(PythonParser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(PythonParser.Continue_stmtContext,0)


        def import_stmt(self):
            return self.getTypedRuleContext(PythonParser.Import_stmtContext,0)


        def pass_stmt(self):
            return self.getTypedRuleContext(PythonParser.Pass_stmtContext,0)


        def try_except(self):
            return self.getTypedRuleContext(PythonParser.Try_exceptContext,0)


        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def condicional(self):
            return self.getTypedRuleContext(PythonParser.CondicionalContext,0)


        def loop_while(self):
            return self.getTypedRuleContext(PythonParser.Loop_whileContext,0)


        def loop_for(self):
            return self.getTypedRuleContext(PythonParser.Loop_forContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = PythonParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.print_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.input_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 68
                self.return_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 69
                self.break_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 70
                self.continue_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 71
                self.import_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 72
                self.pass_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 73
                self.try_except()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 74
                self.expr(0)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 75
                self.condicional()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 76
                self.loop_while()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 77
                self.loop_for()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.NEWLINE)
            else:
                return self.getToken(PythonParser.NEWLINE, i)

        def INDENT(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.INDENT)
            else:
                return self.getToken(PythonParser.INDENT, i)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = PythonParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(PythonParser.NEWLINE)
            self.state = 86 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 81
                    self.match(PythonParser.INDENT)
                    self.state = 82
                    self.stat()
                    self.state = 84
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        self.state = 83
                        self.match(PythonParser.NEWLINE)



                else:
                    raise NoViableAltException(self)
                self.state = 88 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Op_assignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(PythonParser.ASSIGN, 0)

        def PLUS_ASSIGN(self):
            return self.getToken(PythonParser.PLUS_ASSIGN, 0)

        def MINUS_ASSIGN(self):
            return self.getToken(PythonParser.MINUS_ASSIGN, 0)

        def MULT_ASSIGN(self):
            return self.getToken(PythonParser.MULT_ASSIGN, 0)

        def DIV_ASSIGN(self):
            return self.getToken(PythonParser.DIV_ASSIGN, 0)

        def MOD_ASSIGN(self):
            return self.getToken(PythonParser.MOD_ASSIGN, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_op_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp_assignment" ):
                return visitor.visitOp_assignment(self)
            else:
                return visitor.visitChildren(self)




    def op_assignment(self):

        localctx = PythonParser.Op_assignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_op_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 8455716864) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Op_multContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MULT(self):
            return self.getToken(PythonParser.MULT, 0)

        def DIV(self):
            return self.getToken(PythonParser.DIV, 0)

        def MOD(self):
            return self.getToken(PythonParser.MOD, 0)

        def FLOOR_DIV(self):
            return self.getToken(PythonParser.FLOOR_DIV, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_op_mult

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp_mult" ):
                return visitor.visitOp_mult(self)
            else:
                return visitor.visitChildren(self)




    def op_mult(self):

        localctx = PythonParser.Op_multContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_op_mult)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 790273982464) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Op_addContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(PythonParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(PythonParser.MINUS, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_op_add

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp_add" ):
                return visitor.visitOp_add(self)
            else:
                return visitor.visitChildren(self)




    def op_add(self):

        localctx = PythonParser.Op_addContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_op_add)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            _la = self._input.LA(1)
            if not(_la==33 or _la==34):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Op_compContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(PythonParser.EQ, 0)

        def NEQ(self):
            return self.getToken(PythonParser.NEQ, 0)

        def LT(self):
            return self.getToken(PythonParser.LT, 0)

        def GT(self):
            return self.getToken(PythonParser.GT, 0)

        def LTE(self):
            return self.getToken(PythonParser.LTE, 0)

        def GTE(self):
            return self.getToken(PythonParser.GTE, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_op_comp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp_comp" ):
                return visitor.visitOp_comp(self)
            else:
                return visitor.visitChildren(self)




    def op_comp(self):

        localctx = PythonParser.Op_compContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_op_comp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 69269232549888) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PythonParser.ID, 0)

        def op_assignment(self):
            return self.getTypedRuleContext(PythonParser.Op_assignmentContext,0)


        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = PythonParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(PythonParser.ID)
            self.state = 99
            self.op_assignment()
            self.state = 100
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(PythonParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(PythonParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PythonParser.RPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.ExprContext)
            else:
                return self.getTypedRuleContext(PythonParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.COMMA)
            else:
                return self.getToken(PythonParser.COMMA, i)

        def getRuleIndex(self):
            return PythonParser.RULE_print_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint_stmt" ):
                return visitor.visitPrint_stmt(self)
            else:
                return visitor.visitChildren(self)




    def print_stmt(self):

        localctx = PythonParser.Print_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_print_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(PythonParser.PRINT)
            self.state = 103
            self.match(PythonParser.LPAREN)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 276126952153153984) != 0):
                self.state = 104
                self.expr(0)
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==47:
                    self.state = 105
                    self.match(PythonParser.COMMA)
                    self.state = 106
                    self.expr(0)
                    self.state = 111
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 114
            self.match(PythonParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Input_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PythonParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(PythonParser.ASSIGN, 0)

        def INPUT(self):
            return self.getToken(PythonParser.INPUT, 0)

        def LPAREN(self):
            return self.getToken(PythonParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PythonParser.RPAREN, 0)

        def STRING(self):
            return self.getToken(PythonParser.STRING, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_input_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInput_stmt" ):
                return visitor.visitInput_stmt(self)
            else:
                return visitor.visitChildren(self)




    def input_stmt(self):

        localctx = PythonParser.Input_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_input_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(PythonParser.ID)
            self.state = 117
            self.match(PythonParser.ASSIGN)
            self.state = 118
            self.match(PythonParser.INPUT)
            self.state = 119
            self.match(PythonParser.LPAREN)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==57:
                self.state = 120
                self.match(PythonParser.STRING)


            self.state = 123
            self.match(PythonParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(PythonParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_return_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_stmt" ):
                return visitor.visitReturn_stmt(self)
            else:
                return visitor.visitChildren(self)




    def return_stmt(self):

        localctx = PythonParser.Return_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_return_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(PythonParser.RETURN)
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 126
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Break_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(PythonParser.BREAK, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_break_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreak_stmt" ):
                return visitor.visitBreak_stmt(self)
            else:
                return visitor.visitChildren(self)




    def break_stmt(self):

        localctx = PythonParser.Break_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_break_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(PythonParser.BREAK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Continue_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTINUE(self):
            return self.getToken(PythonParser.CONTINUE, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_continue_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinue_stmt" ):
                return visitor.visitContinue_stmt(self)
            else:
                return visitor.visitChildren(self)




    def continue_stmt(self):

        localctx = PythonParser.Continue_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_continue_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(PythonParser.CONTINUE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pass_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PASS(self):
            return self.getToken(PythonParser.PASS, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_pass_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPass_stmt" ):
                return visitor.visitPass_stmt(self)
            else:
                return visitor.visitChildren(self)




    def pass_stmt(self):

        localctx = PythonParser.Pass_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_pass_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(PythonParser.PASS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(PythonParser.IMPORT, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.ID)
            else:
                return self.getToken(PythonParser.ID, i)

        def AS(self):
            return self.getToken(PythonParser.AS, 0)

        def FROM(self):
            return self.getToken(PythonParser.FROM, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_import_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_stmt" ):
                return visitor.visitImport_stmt(self)
            else:
                return visitor.visitChildren(self)




    def import_stmt(self):

        localctx = PythonParser.Import_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_import_stmt)
        self._la = 0 # Token type
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.match(PythonParser.IMPORT)
                self.state = 136
                self.match(PythonParser.ID)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==24:
                    self.state = 137
                    self.match(PythonParser.AS)
                    self.state = 138
                    self.match(PythonParser.ID)


                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.match(PythonParser.FROM)
                self.state = 142
                self.match(PythonParser.ID)
                self.state = 143
                self.match(PythonParser.IMPORT)
                self.state = 144
                self.match(PythonParser.ID)
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==24:
                    self.state = 145
                    self.match(PythonParser.AS)
                    self.state = 146
                    self.match(PythonParser.ID)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(PythonParser.DEF, 0)
